--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,1 +1,13 @@
-locations#index page
+<h1>EventOnly</h1>
+
+<p>
+  <%= link_to 'New Location', new_location_path %>
+</p>
+
+<%= render @locations %>
+
+
+
+<!-- <% @locations.each do |l| %>
+  <%= render 'location', location: l %>
+<% end %> -->
