add events files. n

--- a/app/views/example/form.html.erb
+++ b/app/views/example/form.html.erb
@@ -1,4 +1,4 @@
-<h1>You gotta have a J.O.B/h1>
+<h1>You gotta have a J.O.B</h1>
 
 <%= form_for @job_application, url: {action: "form"} do |f| %>
   Full Name: <%= f.text_field :full_name %><br />
