--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,5 +1,5 @@
 
-<%= form_for [@location, event] do |f| %>
+<%= form_for [@location, @event] do |f| %>
   <p>
     <%= f.label :name %>
     <br><%= f.text_field :name %>
