--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,3 +1,3 @@
-<h1>Edit <%= link_to @event.name, @event %></h1>
+<h1>Edit</h1>
 
-<%= render 'form', event: @location %>
+<%= render 'form', event: @event %>
