--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,3 +1,7 @@
 events#show page
 
 <%= render @event %>
+
+<%= link_to 'Edit', edit_location_event_path %>
+
+<%= link_to 'Delete', location_event_path, method: :delete, data: {confirm: "Are you sure you want to delete this event '#{@event.name}'? This cannot be undone!"} %>
